optimizer fix